сетки и стилизация шаблонов

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,6 +1,5 @@
 // Typography
 $font-family-sans-serif: "Trebuchet", Arial, sans-serif;
-$font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
 // Colors
@@ -9,7 +8,7 @@ $indigo: #6574cd;
 $purple: #9561e2;
 $pink: #f66D9b;
 $red: #e3342f;
-$orange: #f6993f;
+$orange: #eebb45;
 $yellow: #efcb4c;
 $green: #38c172;
 $teal: #4dc0b5;
@@ -20,8 +19,13 @@ $gray-600: #6c757d;
 $gray-900: #333333;
 $black: #000000;
 $white: #ffffff;
+$brown-light: #e1d9a4;
 
 $center: 0 auto;
+
+// transition conf
+$duration: 0.3s;
+$transition-style: ease-in-out;
 
 //navbar
 $height-navbar-sm: 95px;
@@ -29,36 +33,44 @@ $height-navbar-md: 150px;
 
 //container
 $container: (
- "xs": 92%,
- "ml": 85.5%,
- "xl": 90%
+"xs": 92%,
+"ml": 86%,
+"xl": 90%
+);
+
+//breakpoints
+$grid-breakpoints: (
+xs: 0,
+sm: 576px,
+md: 720px,
+lg: 992px,
+xl: 1200px
 );
 
 // Body
 $body-bg: $white;
 
 // Breadcrumbs
-
 $breadcrumb-padding-y: 1.4rem;
 $breadcrumb-padding-x: 0;
-// $breadcrumb-item-padding:           .5rem !default;
-
-// $breadcrumb-margin-bottom:          1rem !default;
-
 $breadcrumb-bg:                     $gray-200;
 $breadcrumb-divider-color:          $gray-600;
 $breadcrumb-active-color:           $gray-900;
 $breadcrumb-divider:                quote("/");
-
 $breadcrumb-border-radius:          0;
 
-// $headings-margin-bottom:      $spacer / 2 !default;
+//h
 $headings-font-weight: 700;
-// $headings-line-height:        1.2 !default;
-// $headings-color:              null !default;
-// $h1-font-size:                $font-size-base * 2.5;
-// $h2-font-size:                $font-size-base * 2 !default;
-// $h3-font-size:                $font-size-base * 1.75 !default;
-// $h4-font-size:                $font-size-base * 1.5 !default;
-// $h5-font-size:                $font-size-base * 1.25 !default;
-// $h6-font-size:                $font-size-base !default;
+
+//pagination
+$pagination-color:                  $gray-600;
+$pagination-border-width:           2px;
+$pagination-border-color:           $gray-200;
+
+$pagination-hover-color:            $black;
+$pagination-hover-bg:               $gray-200;
+$pagination-hover-border-color:     $gray-200;
+
+$pagination-active-color:           $black;
+$pagination-active-bg:              $gray-200;
+$pagination-active-border-color:    $gray-200;
