--- a/resources/sass/blocks/banner.scss
+++ b/resources/sass/blocks/banner.scss
@@ -1,4 +1,87 @@
 .banner {
     padding: 0;
+    margin-bottom: 2rem;
+    border: 0;
+}
+
+.banner__container {
+    display: block;
+    padding: 2.2rem 0;
     background-color: $gray-100;
+    color: $black;
+    transition: all $duration $transition-style;
+
+    &:focus,
+    &:hover {
+        text-decoration: none;
+        box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.5);
+        color: $black;
+    }
+
+    &:active {
+        opacity: 0.5;
+    }
+}
+
+.banner__name-page {
+    text-transform: uppercase;
+    font-size: 1.25rem;
+    margin-bottom: 1rem;
+    letter-spacing: 0.04em;
+}
+
+.banner__title {
+    color: $white;
+    font-size: 1.15rem;
+    padding: 0.5rem 0;
+    padding-left: 4%;
+    padding-right: 1rem;
+    margin-bottom: 3.6rem;
+    display: inline-flex;
+    min-width: 50%;
+}
+
+.banner__text-preview {
+    font-size: 1.6rem;
+    margin-bottom: 0;
+    line-height: 2rem;
+    color: $black;
+}
+
+@include media-breakpoint-up(md) {
+    .banner__title {
+        padding-left: 7%;
+    }
+}
+
+@include  media-breakpoint-up(lg) {
+    .banner__container {
+        padding: 2rem 0;
+
+        & .main-container {
+            width: 100%;
+        }
+    }
+
+    .banner__name-page {
+        font-size: 0.71rem;
+        letter-spacing: 0.02em;
+        width: 100%;
+    }
+
+    .banner__title {
+        font-size: 0.71rem;
+        margin-bottom: 2rem;
+        padding-left: 2rem;
+        width: 70%;
+        max-width: 870px;
+    }
+
+    .banner__text-preview {
+        margin: 0;
+        font-size: 1.2rem;
+        padding-left: 2rem;
+        width: 70%;
+        max-width: 870px;
+    }
 }
