--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11093,6 +11093,8 @@ html {
 @media (min-width: 992px) {
   .article-text {
     width: 100%;
+    max-width: 1150px;
+    margin: 0;
   }
 
   .article-text__description {
