--- a/resources/sass/blocks/article-text.scss
+++ b/resources/sass/blocks/article-text.scss
@@ -18,6 +18,8 @@
 @include  media-breakpoint-up(lg) {
     .article-text {
         width: 100%;
+        max-width: 1150px;
+        margin: 0;
     }
 
     .article-text__description {
