--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -21,3 +21,6 @@
 @import "blocks/article-card";
 @import "blocks/article-text";
 @import "blocks/news-container";
+@import "blocks/subscribe";
+@import "blocks/main-footer";
+@import "blocks/social";
