--- a/resources/sass/blocks/btn-subscribe.scss
+++ b/resources/sass/blocks/btn-subscribe.scss
@@ -5,6 +5,9 @@
     border-radius: 8rem;
     margin-top: 3rem;
     margin-bottom: 5rem;
+    background-image: url("../images/btn-bg.png");
+    background-size: cover;
+    background-position: center;
 }
 
 @include  media-breakpoint-up(lg) {
