--- a/resources/sass/blocks/top-banner.scss
+++ b/resources/sass/blocks/top-banner.scss
@@ -1,8 +1,12 @@
 .top-banner {
-    background-color: $gray-100;
+    background-color: $blue;
     color: $gray-900;
     padding: 2rem 0;
     margin-bottom: 2rem;
+    background-image: url("../images/top-banners-articles.png");
+    background-size: cover;
+    background-position: 0 50%;
+    background-repeat: no-repeat;
 
     & strong {
         font-size: 1.7rem;
@@ -15,17 +19,38 @@
         font-size: 12px;
     }
 
+    &__title {
+
+        a {
+            color: $white;
+
+            &:focus,
+            &:hover {
+                color: $white;
+                text-decoration: none;
+                opacity: 0.7;
+            }
+        }
+    }
+
     &--main {
         background-color: $yellow;
+        background-image: url("../images/top-banners-main.png");
 
         &__title {
             font-size: 2rem;
             margin-bottom: 1rem;
             margin-top: 1rem;
         }
+
         &__text {
             font-size: 17px;
         }
+    }
+
+    &--news {
+        background-color: $orange;
+        background-image: url("../images/top-banners-news.png");
     }
 }
 
@@ -34,7 +59,7 @@
         margin-bottom: 2.5rem;
 
         &__title {
-            font-size: 4.7rem;
+            font-size: 4rem;
         }
 
         &--main__title {
@@ -50,6 +75,12 @@
         width: map-get($container, xl);
         margin: $center;
         margin-bottom: 2.6rem;
+        background-image: url("../images/top-banners-articles-xl.png");
+        max-width: 1710px;
+
+        &--news {
+            background-image: url("../images/top-banners-news-xl.png");
+        }
 
         &__text,
         & strong {
@@ -58,17 +89,22 @@
 
         &__title {
             width: 80%;
-            font-size: 4rem;
+            font-size: 3.8rem;
+            margin-top: 1rem;
+        }
+
+        &--main {
+            background-image: url("../images/top-banners-main-xl.png");
         }
 
         &--main__title {
             font-size: 62px;
         }
-    }
 
-    .top-banner__container {
-        width: 100%;
-        padding: 2rem;
+        &__container {
+            width: 100%;
+            padding:  0 2rem;
+        }
     }
 }
 
