Вынос баннеров в отдельную таблицу Добавлена таблица хранения изображений Добавлено API для редактирования банеров

--- a/resources/admin/sass/laraspace.scss
+++ b/resources/admin/sass/laraspace.scss
@@ -10,6 +10,7 @@
 @import '../../../node_modules/font-awesome/scss/font-awesome.scss';
 @import "../../../node_modules/toastr/toastr";
 @import '../../../node_modules/@riophae/vue-treeselect/dist/vue-treeselect.css';
+@import '../../../node_modules/vue2-dropzone/dist/vue2Dropzone.min.css';
 
 
 
