добавила обертку для баннеров, исправила бэкграунд

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,6 +11,7 @@
 @import "blocks/main-header";
 @import "blocks/breadcrumb";
 @import "blocks/main-navbar";
+@import "blocks/top-banner-wrapper";
 @import "blocks/top-banner";
 @import "blocks/banners-group";
 @import "blocks/banner";
