--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10765,6 +10765,12 @@ html {
   display: flex;
   color: #333333;
   font-size: 1.2rem;
+  line-height: 1.25rem;
+  letter-spacing: -0.02em;
+}
+
+.main-navbar__link i {
+  line-height: 1.25rem;
 }
 
 .main-navbar__toggler {
@@ -10794,12 +10800,28 @@ html {
   }
 }
 
+.top-banner-wrapper {
+  margin-bottom: 2rem;
+}
+
+@media (min-width: 720px) {
+  .top-banner-wrapper {
+    margin-bottom: 2.5rem;
+  }
+}
+
+@media (min-width: 992px) {
+  .top-banner-wrapper {
+    width: 90%;
+    margin: 0 auto;
+    margin-bottom: 2.6rem;
+  }
+}
+
 .top-banner {
+  padding: 2rem 0;
   background-color: #3490dc;
   color: #333333;
-  padding: 2rem 0;
-  margin-bottom: 2rem;
-  background-image: url(/images/top-banners-articles.png?b6d3e0ca569baac0660a181d87bb3bdc);
   background-size: cover;
   background-position: 0 50%;
   background-repeat: no-repeat;
@@ -10829,7 +10851,6 @@ html {
 
 .top-banner--main {
   background-color: #efcb4c;
-  background-image: url(/images/top-banners-main.png?4bd92f9f7b691e629cdd8638b8b334e8);
 }
 
 .top-banner--main__title {
@@ -10844,14 +10865,9 @@ html {
 
 .top-banner--news {
   background-color: #eebb45;
-  background-image: url(/images/top-banners-news.png?6d208da7dea2d6dde9667e479ab37df7);
 }
 
 @media (min-width: 720px) {
-  .top-banner {
-    margin-bottom: 2.5rem;
-  }
-
   .top-banner__title {
     font-size: 4rem;
   }
@@ -10864,18 +10880,6 @@ html {
 }
 
 @media (min-width: 992px) {
-  .top-banner {
-    width: 90%;
-    margin: 0 auto;
-    margin-bottom: 2.6rem;
-    background-image: url(/images/top-banners-articles-xl.png?dfca31d0e94b0538af9a374881d8b577);
-    max-width: 1710px;
-  }
-
-  .top-banner--news {
-    background-image: url(/images/top-banners-news-xl.png?5f34f22b0a266e02e29f08c9a03a1f37);
-  }
-
   .top-banner__text,
   .top-banner strong {
     width: 80%;
@@ -10885,10 +10889,6 @@ html {
     width: 80%;
     font-size: 3.8rem;
     margin-top: 1rem;
-  }
-
-  .top-banner--main {
-    background-image: url(/images/top-banners-main-xl.png?64e1b8c207e62cc382b5c25bd1cf9fe8);
   }
 
   .top-banner--main__title {
@@ -10922,7 +10922,6 @@ html {
   background-color: #f3f4f0;
   color: #000000;
   transition: all 0.3s ease-in-out;
-  background-image: url(/images/bg-menu-banner.png?82aa6946e41fb7dad7cc520fc2009e96);
   background-size: cover;
   background-position: center;
 }
@@ -10971,43 +10970,11 @@ html {
 }
 
 @media (min-width: 992px) {
-  .banners-group .banner:nth-child(1) .banner__container {
-    background-image: url(/images/banners-main-1.png?fa7c84d32c4bb0b9cd268ec8b3687f60);
-    background-size: cover;
-    background-position: 50% 100%;
-    background-repeat: no-repeat;
-  }
-
-  .banners-group .banner:nth-child(2) .banner__container {
-    background-image: url(/images/banners-main-2.png?a82bf23694acaffdb5a660d6bc5c31da);
-    background-size: cover;
-    background-position: 50% 100%;
-    background-repeat: no-repeat;
-  }
-
-  .banners-group .banner:nth-child(3) .banner__container {
-    background-image: url(/images/banners-main-3.png?aae965d31d817abd2d866c3f4ddbe832);
-    background-size: cover;
-    background-position: 50% 100%;
-    background-repeat: no-repeat;
-  }
-
-  .banners-group .banner:nth-child(4) .banner__container {
-    background-image: url(/images/banners-main-4.png?f655c9bfc3e8be35eec88b74d38246e8);
-    background-size: cover;
-    background-position: 50% 100%;
-    background-repeat: no-repeat;
-  }
-
-  .banners-group .banner:nth-child(5) .banner__container {
-    background-image: url(/images/banners-main-5.png?1fecddc551566614e26dff5464c666ca);
-    background-size: cover;
-    background-position: 50% 100%;
-    background-repeat: no-repeat;
-  }
-
   .banner__container {
     padding: 2.5rem 0;
+    background-size: cover;
+    background-position: 50% 100%;
+    background-repeat: no-repeat;
   }
 
   .banner__container .main-container {
