--- a/resources/sass/blocks/main-navbar.scss
+++ b/resources/sass/blocks/main-navbar.scss
@@ -8,6 +8,12 @@
     display: flex;
     color: $gray-900;
     font-size: 1.2rem;
+    line-height: 1.25rem;
+    letter-spacing: -0.02em;
+
+    & i {
+        line-height: 1.25rem;
+    }
 }
 
 .main-navbar__toggler {
