--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -62,6 +62,10 @@ $breadcrumb-border-radius:          0;
 //h
 $headings-font-weight: 700;
 
+//navbarNav
+$navbar-light-color: $gray-900;
+$navbar-light-hover-color: $gray-600;
+
 //pagination
 $pagination-color:                  $gray-600;
 $pagination-border-width:           2px;
