Исправлена ошибка с хлебными крошками страницы Доработан текстовый редактор, добавлен файловый менеджер. Исправлены проблемы с сохранением страницы

--- a/resources/admin/sass/components/dropzone.scss
+++ b/resources/admin/sass/components/dropzone.scss
@@ -1,72 +1,74 @@
-.vue-dropzone .dz-preview  {
+.vue-dropzone {
+    cursor: pointer;
 
-    width: 150px !important;
-    height:150px !important;
-    background: transparent !important;
+    .dz-preview {
+        display: none;
 
-    &:hover {
-        z-index: 100 !important;
-    }
+        &:hover {
+            z-index: 100 !important;
+        }
 
-    .dz-remove:hover {
-        text-decoration: none !important;
-    }
+        .dz-remove:hover {
+            text-decoration: none !important;
+        }
 
-    .dz-details {
-        background-color:$ls-color-yellow !important;
-        border-radius:30px!important;
-        color:$ls-color-black !important;
-        text-align: center !important;
-        padding-top: 50px !important;
-        .dz-size {
-            margin-bottom: 0 !important;
+        .dz-details {
+            background-color: $ls-color-yellow !important;
+            border-radius: 30px !important;
+            color: $ls-color-black !important;
+            text-align: center !important;
+            padding-top: 50px !important;
+
+            .dz-size {
+                margin-bottom: 0 !important;
+            }
+        }
+
+        .dz-image {
+            border-radius: 30px !important;
+            width: 150px !important;
+            height: 150px !important;
+        }
+
+        .dz-error-message {
+            top: 160px !important;
+            left: 5px !important;
+
+            &::after {
+                top: -6px !important;
+                transform: rotate(180deg) !important;
+            }
+        }
+
+        .dz-upload {
+            background: $ls-color-black !important;
+        }
+
+        .dz-error-mark svg #Page-1 g {
+            fill: $ls-color-black !important;
+        }
+
+        .dz-success-mark svg g path {
+            fill: $ls-color-black !important;
+        }
+
+        .dz-remove {
+            color: $ls-color-black !important;
+            margin-left: 25px !important;
+            padding: 2px !important;
+            bottom: 20px !important;
+            border: 2px $ls-color-black solid !important;
+            font-size: 0.7rem !important;
+            font-weight: 600 !important;
         }
     }
-
-    .dz-image {
-        border-radius:30px !important;
-        width: 150px !important;
-        height:150px !important;
-    }
-
-    .dz-error-message {
-        top: 160px !important;
-        left: 5px !important;
-        &::after {
-            top: -6px !important;
-            transform: rotate(180deg) !important;
-        }
-    }
-
-    .dz-upload {
-        background: $ls-color-black !important;
-    }
-
-    .dz-error-mark svg #Page-1 g{
-        fill:$ls-color-black !important;
-    }
-
-    .dz-success-mark svg g path{
-        fill:$ls-color-black !important;
-    }
-    .dz-remove {
-        color: $ls-color-black !important;
-        margin-left: 25px !important;
-        padding: 2px !important;
-        bottom: 20px !important;
-        border: 2px $ls-color-black solid !important;
-        font-size: 0.7rem !important;
-        font-weight: 600 !important;
-    }
-
-
-
 }
-@media only screen and (max-width: $small-breakpoint ) {
 
-    .vue-dropzone .dz-preview  {
+@media only screen and (max-width: $small-breakpoint) {
 
-        width: 110px!important;
+    .vue-dropzone .dz-preview {
+
+        width: 110px !important;
         height: 110px !important;
         background: transparent !important;
         margin: 5px !important;
@@ -74,7 +76,7 @@
         .dz-image {
             border-radius: 0;
             width: 100% !important;
-            height:100% !important;
+            height: 100% !important;
         }
 
         .dz-progress {
@@ -105,18 +107,18 @@
 
             &::after {
                 left: 45px !important;
-             }
+            }
         }
 
         .dz-error-mark svg #Page-1 g {
-            display: flex!important;
-            justify-content: center!important;
+            display: flex !important;
+            justify-content: center !important;
             align-items: center !important;
         }
 
         .dz-success-mark svg g path {
-            display: flex!important;
-            justify-content: center!important;
+            display: flex !important;
+            justify-content: center !important;
             align-items: center !important;
         }
 
@@ -124,7 +126,8 @@
             width: 44px !important;
             height: 40px !important;
         }
-        .dz-error-mark  svg {
+
+        .dz-error-mark svg {
             width: 44px !important;
             height: 40px !important;
         }
