Добавлено создание страниц Доработано редактирование страниц. Исправлены проблемы с удалением банера

--- a/resources/admin/sass/partials/sidebar.scss
+++ b/resources/admin/sass/partials/sidebar.scss
@@ -57,7 +57,7 @@
                 }
             }
 
-            a.active{
+            a.router-link-exact-active{
                 color: $ls-color-primary;
             }
         }
