стилизация выпадающего меню

--- a/resources/sass/blocks/breadcrumb.scss
+++ b/resources/sass/blocks/breadcrumb.scss
@@ -6,6 +6,8 @@
     & a {
         text-decoration: underline;
         color: $gray-600;
+        line-height: 20px;
+        letter-spacing: -0.02em;
     }
 }
 
