--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -15,6 +15,7 @@ $teal: #4dc0b5;
 $cyan: #6cb2eb;
 $gray-100: #f3f4f0;
 $gray-200: #eaeaea;
+$gray-footer: #cccccc;
 $gray-600: #6c757d;
 $gray-900: #333333;
 $black: #000000;
