--- a/resources/sass/blocks/banner.scss
+++ b/resources/sass/blocks/banner.scss
@@ -12,6 +12,7 @@
     transition: all $duration $transition-style;
     background-size: cover;
     background-position: center;
+    font-weight: 700;
 
     &:focus,
     &:hover {
@@ -30,6 +31,8 @@
     font-size: 1.25rem;
     margin-bottom: 1rem;
     letter-spacing: 0.04em;
+    // font-size: 24px;
+    font-weight: 700;
 
     &:focus,
     &:hover,
@@ -42,6 +45,7 @@
     color: $white;
     background-color: $blue;
     font-size: 1.15rem;
+    // font-size: 22px;
     padding: 0.5rem 0;
     padding-left: (100% - map-get($container, xs))/2;
     padding-right: 1rem;
@@ -52,8 +56,8 @@
 
 .banner__text-preview {
     font-size: 1.6rem;
+    // font-size: 30px;
     margin-bottom: 0;
-    line-height: 2rem;
     color: $black;
 }
 
