--- a/resources/sass/blocks/main-footer.scss
+++ b/resources/sass/blocks/main-footer.scss
@@ -1,7 +1,8 @@
 .main-footer {
-    color: rgba($white, 0.7);
+    color: rgba($gray-footer, 0.7);
     background-color: $gray-900;
-    font-size: 1.1rem;
+    // font-size: 1.1rem;
+    font-size: 20px;
     padding: 60px 0;
 
     &__nav {
