--- a/resources/sass/blocks/top-banner.scss
+++ b/resources/sass/blocks/top-banner.scss
@@ -15,6 +15,10 @@
 
     &__title {
             color: $white;
+
+            & a {
+                color: $white;
+            }
     }
 
     &--main {
