--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -30,7 +30,7 @@ $transition-style: ease-in-out;
 
 //navbar
 $height-navbar-sm: 95px;
-$height-navbar-md: 150px;
+$height-navbar-lg: 150px;
 
 //container
 $container: (
