--- a/resources/sass/blocks/main-navbar.scss
+++ b/resources/sass/blocks/main-navbar.scss
@@ -1,7 +1,17 @@
 .main-navbar {
     background-color: $white;
     padding: 0;
-    min-height: $height-navbar-sm;
+    // min-height: $height-navbar-sm;
+
+    & .show {
+        background-color: $gray-200;
+    }
+}
+
+.main-navbar__list {
+    & .nav-item {
+        margin-bottom: 20px;
+    }
 }
 
 .main-navbar__link {
@@ -22,9 +32,25 @@
     margin-left: auto;
 }
 
-@include  media-breakpoint-up(md) {
+.main-navbar__dropdown-menu {
+    border: none;
+    border-radius: 0;
+
+    & .dropdown-item {
+        background-color: transparent;
+        margin-bottom: 20px;
+
+        &:focus,
+        &:hover {
+            text-decoration: underline;
+        }
+    }
+}
+
+@include  media-breakpoint-up(lg) {
     .main-navbar__link {
         height: 100%;
+        background-color: $white;
         font-size: 0.85rem;
         padding-top: 0.75rem;
         padding-bottom: 1.2rem;
@@ -32,21 +58,34 @@
     }
 
     .main-navbar {
-        min-height: $height-navbar-md;
+        min-height: $height-navbar-lg;
 
         & .nav-item {
             width: 20%;
             max-width: 220px;
+            margin-bottom: 0;
+        }
+
+        & .show {
+            background-color: $white;
         }
 
         & .navbar-nav .show > .nav-link {
             border-top: 1.2rem solid $green;
-            box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.5);
+            box-shadow: 0px -5px 4px 0px rgba($black,0.19);
+            position: relative;
+            z-index: 10000;
         }
     }
 
     .main-navbar__list {
         width: 100%;
         justify-content: space-between;
+    }
+
+    .main-navbar__dropdown-menu {
+        margin: 0;
+        box-shadow: 0px 0px 4px 0px rgba($black,0.19);
+        top: 98%;
     }
 }
