--- a/resources/sass/blocks/top-banner-wrapper.scss
+++ b/resources/sass/blocks/top-banner-wrapper.scss
@@ -1,5 +1,20 @@
 .top-banner-wrapper {
     margin-bottom: 2rem;
+    position: relative;
+    z-index: 1500;
+
+    & a {
+        &:focus,
+        &:hover {
+            text-decoration: none;
+            box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.5);
+            color: $black;
+        }
+
+        &:active {
+            opacity: 0.5;
+        }
+    }
 }
 
 @include  media-breakpoint-up(md) {
