исправила ссыылку в новостях

--- a/resources/sass/blocks/news.scss
+++ b/resources/sass/blocks/news.scss
@@ -5,7 +5,8 @@
     &:focus,
     &:hover,
     &:active {
-        text-decoration: none;
+        text-decoration: underline;
+        color: $black;
     }
 }
 
