--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11130,7 +11130,8 @@ body.ckeditor {
 .news__link:focus,
 .news__link:hover,
 .news__link:active {
-  text-decoration: none;
+  text-decoration: underline;
+  color: #000000;
 }
 
 .news__date {
