--- a/resources/sass/blocks/banner.scss
+++ b/resources/sass/blocks/banner.scss
@@ -19,6 +19,10 @@
         text-decoration: none;
         box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.5);
         color: $black;
+
+        & .banner__text-preview {
+            text-decoration: underline;
+        }
     }
 
     &:active {
@@ -33,6 +37,7 @@
     letter-spacing: 0.04em;
     // font-size: 24px;
     font-weight: 700;
+    border: none;
 
     &:focus,
     &:hover,
