Добаволено управление секционным банером страницы. Добавлен вывод банеров на главной странице.

--- a/resources/admin/sass/laraspace.scss
+++ b/resources/admin/sass/laraspace.scss
@@ -82,4 +82,6 @@
 @import 'pages/404';
 
 // Frontend components
+@import '../../sass/variables';
 @import '../../sass/blocks/top-banner';
+@import '../../sass/blocks/banner';
