исправила сетку и bg-топ-банер

--- a/resources/sass/blocks/main-sidebar.scss
+++ b/resources/sass/blocks/main-sidebar.scss
@@ -9,3 +9,9 @@
         text-transform: uppercase;
     }
 }
+
+@include  media-breakpoint-up(xxl) {
+    .main-sidebar {
+        padding-left: 105px!important;
+    }
+}
