--- a/resources/sass/blocks/top-banner-wrapper.scss
+++ b/resources/sass/blocks/top-banner-wrapper.scss
@@ -27,5 +27,6 @@
         width: map-get($container, xl);
         margin: $center;
         margin-bottom: 2.6rem;
+        max-width: 1710px;
     }
 }
