--- a/resources/sass/blocks/main-navbar.scss
+++ b/resources/sass/blocks/main-navbar.scss
@@ -1,7 +1,6 @@
 .main-navbar {
     background-color: $white;
     padding: 0;
-    // min-height: $height-navbar-sm;
 
     & .show {
         background-color: $gray-200;
@@ -39,6 +38,9 @@
     & .dropdown-item {
         background-color: transparent;
         margin-bottom: 20px;
+        font-size: 30px;
+        line-height: 30px;
+        letter-spacing: -0.02em;
 
         &:focus,
         &:hover {
@@ -95,5 +97,12 @@
         margin: 0;
         box-shadow: 0px 0px 4px 0px rgba($black,0.19);
         top: 98%;
+        width: 400px;
+        padding-bottom: 3rem;
+
+        & .dropdown-item {
+            font-size: 22px;
+            white-space: normal;
+        }
     }
 }
